test/resources/typer/passing/ExtLambda1.1.scala
object Lambda {
  val f: Int => String = (\(x: Int) -> Std.intToString(x + 1));
  Std.printString(f(1))
}
